<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/review_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/mentor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/review_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/jonathan_williams"
        app:layout_constraintBottom_toBottomOf="@+id/review_image"
        app:layout_constraintStart_toEndOf="@+id/review_image"
        app:layout_constraintTop_toTopOf="@+id/review_image" />

    <androidx.cardview.widget.CardView
        android:layout_width="60dp"
        app:cardCornerRadius="12dp"
        android:padding="2dp"
        android:layout_height="40dp"
        app:cardBackgroundColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="2dp"
            app:cardCornerRadius="10dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent">
                <ImageView
                    android:adjustViewBounds="true"
                    android:src="@drawable/star"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/review_score"
                    android:layout_marginStart="4dp"
                    android:layout_gravity="center"
                    android:text="@string/_5"
                    android:textSize="22sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/review_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/text_color2"
        android:textSize="14sp"
        android:text="@string/hsdj_akjsnkajsnd_akjsn_kjas_ndkjas_ndkajs_dnkasj_nkj"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_image" />

</androidx.constraintlayout.widget.ConstraintLayout>